--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
       <title>Intro to Coding</title>
         <link href="https://fonts.googleapis.com/css?family=Signika+Negative" rel="stylesheet">
-        <link rel='stylesheet' href='css/styles.css' />
+        <link rel='stylesheet' href='CSS/styles.css' />
 
 
     </head>
